# examples-gtest

./: README.md  get-gtest.sh  gtest_dependency.sh
cmake-ext-proj/: CMakeLists.txt  FactorialTest.cpp
mem-leak/: REFERENCES.md  build-and-run.sh  memLeak.cc  out-of-the-box.md
simple-test-program/: build-and-run.sh  test.cc
